test/testdata/list/not_callable_error.lox
["foo"](); // error: 'list' object is not callable
